--- a/BugTracker2/Views/Bugs/BugHistory.cshtml
+++ b/BugTracker2/Views/Bugs/BugHistory.cshtml
@@ -35,14 +35,7 @@
             </li><!-- End Charts Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="users-profile.html">
-                    <i class="bi bi-person"></i>
-                    <span>Profile</span>
-                </a>
-            </li><!-- End Profile Page Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="Login">
+                <a class="nav-link collapsed" href="Account/Login">
                     <i class="bi bi-box-arrow-in-right"></i>
                     <span>Login</span>
                 </a>
