--- a/BugTracker2/Views/Home/Index.cshtml
+++ b/BugTracker2/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using BugTracker2.Models;
-@model BugTracker2.Models.BugModel
-
+﻿@model List<BugTracker2.Models.BugModel>
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -64,48 +62,47 @@
 
         <div class="container p-4 bg-light shadow-lg" id="stubborndiv">
 
-            <h3 class="font-weight-light text-black" style="font-family: Bahnschrift; font-size: xx-large;">Bug Management UI</h3>
+            <h3 class="font-weight-light text-black" style="font-family: calibri; font-size: xx-large;">Bug Management UI</h3>
             <div class="row flex-row">
 
-                <div class="col-4 p-1 min-vh-100">
+                <div class="col-4 p-1 min-vh-100" id="newcolumn">
                     <div class="card bg-light min-vh-100 shadow-lg">
                         <div class="card-body p-1">
                             <div class="container p-1 shadow-lg border border: rounded">
-                                <h6 class="card-title text-uppercase text-center font-weight-light" style="font-family: Bahnschrift; font-size: large ">New</h6>
+                                <h6 class="card-title text-uppercase text-center font-weight-light" style="font-family: calibri; font-size: large ">New</h6>
                             </div>
                             <div class="items border border-light">
-
-                                @foreach (var bug in BugModel.LoadBugs().Where(x => x.BugStatus.Equals("New")))
-                                {
-                                    //Need to fix id below so each element has a unique id for editing
-                                    <div class="card draggable shadow-sm" id="cd1" draggable="true" ondragstart="drag(event)">
-                                        <div class="card-body p-1 border">
-                                            <div class="card-title">
-                                                <button class="btn btn-primary btn-sm float-right">@bug.BugStatus</button>
-                                                <a>Bug ID: @bug.BugID</a>
-                                            </div>
-                                            <div class="container p-1 shadow-lg border border: rounded">
-                                                <p class="text-md-left">
-                                                    @bug.BugDescription
-                                                </p>
+                                @foreach (var bug in Model.Where(x => x.BugStatus.Equals("New")))
+                                    {
+                                        //Need to fix id below so each element has a unique id for editing
+                                        <div class="card draggable shadow-sm" id="cd1" draggable="true" ondragstart="drag(event)">
+                                            <div class="card-body p-1 border">
+                                                <div class="card-title">
+                                                    <button class="btn btn-primary btn-sm float-right">@bug.BugStatus</button>
+                                                    <a>Bug ID: @bug.BugID</a>
+                                                </div>
+                                                <div class="container p-1 shadow-lg border border: rounded">
+                                                    <p class="text-md-left">
+                                                        @bug.BugDescription
+                                                    </p>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                }
+                                    }
                                 <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-4 p-1 min-vh-100">
+                <div class="col-4 p-1 min-vh-100" id="opencolumn">
                     <div class="card bg-light min-vh-100 shadow-lg">
                         <div class="card-body p-1">
                             <div class="container p-1 shadow-lg border border: rounded">
-                                <h6 class="card-title text-uppercase text-center font-weight-light" style="font-family: Bahnschrift; font-size: large ">Open</h6>
+                                <h6 class="card-title text-uppercase text-center font-weight-light" style="font-family: calibri; font-size: large ">Open</h6>
                             </div>
                             <div class="items border border-light">
-                                @foreach (var bug in BugModel.LoadBugs().Where(x => x.BugStatus.Equals("Open")))
+                                @foreach (var bug in Model.Where(x => x.BugStatus.Equals("Open")))
                                 {
                                     //Need to fix id below so each element has a unique id for editing
                                     <div class="card draggable shadow-sm" id="cd2" draggable="true" ondragstart="drag(event)">
@@ -128,14 +125,14 @@
                     </div>
                 </div>
 
-                <div class="col-4 p-1 min-vh-100">
+                <div class="col-4 p-1 min-vh-100" id="completecolumn">
                     <div class="card bg-light min-vh-100 shadow-lg">
                         <div class="card-body p-1">
                             <div class="container p-1 shadow-lg border border: rounded">
-                                <h6 class="card-title text-uppercase font-weight-light text-center" style="font-family: Bahnschrift; font-size: large ">Complete</h6>
+                                <h6 class="card-title text-uppercase font-weight-light text-center" style="font-family: calibri; font-size: large ">Complete</h6>
                             </div>
                             <div class="items border border-light">
-                                @foreach (var bug in BugModel.LoadBugs().Where(x => x.BugStatus.Equals("Complete")))
+                                @foreach (var bug in Model.Where(x => x.BugStatus.Equals("Complete")))
                                 {
                                     //Need to fix id below so each element has a unique id for editing
                                     <div class="card draggable shadow-sm" id="cd3" draggable="true" ondragstart="drag(event)">
