--- a/BugTracker2/wwwroot/css/style.css
+++ b/BugTracker2/wwwroot/css/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Calibri", sans-serif;
   background: #f6f9ff;
   color: #444444;
 }
@@ -29,7 +29,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: "Calibri", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -233,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 18px;
   font-weight: 500;
   color: #012970;
-  font-family: "Poppins", sans-serif;
+  font-family: "Calibri", sans-serif;
 }
 .card-title span {
   color: #899bbd;
@@ -252,7 +252,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Alerts */
 .alert-heading {
   font-weight: 500;
-  font-family: "Poppins", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 20px;
 }
 
@@ -297,7 +297,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Breadcrumbs */
 .breadcrumb {
   font-size: 14px;
-  font-family: "Nunito", sans-serif;
+  font-family: Calibri, sans-serif;
   color: #899bbd;
   font-weight: 600;
 }
@@ -353,7 +353,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 26px;
   font-weight: 700;
   color: #012970;
-  font-family: "Nunito", sans-serif;
+  font-family: Nunito;
 }
 
 .header {
@@ -596,6 +596,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .sidebar-nav .nav-item {
   margin-bottom: 5px;
+  font-family: "Nunito" !important;
 }
 .sidebar-nav .nav-heading {
   font-size: 11px;
