--- a/BugTracker2/Views/Bugs/SubmitTicket.cshtml
+++ b/BugTracker2/Views/Bugs/SubmitTicket.cshtml
@@ -52,7 +52,7 @@
             </nav>
         </div><!-- End Page Title -->
 
-        <div class="col-lg-12">
+        <div class="col-lg-12 p-0">
             <div class="card mb-3">
                 <div class="card-body">
                     <div class="pt-4 pb-2">
