--- a/BugTracker2/Views/Account/Login.cshtml
+++ b/BugTracker2/Views/Account/Login.cshtml
@@ -1,7 +1,25 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
 }
 <h2>Login</h2>
-<div>@ViewBag.Result</div>
+<div>Form here for Login</div>
+
+<div class="col-lg-12 p-0">
+    <div class="card mb-3">
+        <div class="card-body">
+            <div class="pt-4 pb-2">
+                <h5 class="card-title text-center pb-0 fs-4">Submit A Ticket</h5>
+                <p class="text-center small">Describe the issue you are having.</p>
+            </div>
+            <form id="cleetus">
+
+                @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+                {
+                    @*@Html.TextAreaFor()
+                    @Html.ValidationMessageFor()*@
+                    <input type="submit" style="width: 100%; height: 35px;" value="Login" />
+                }
+            </form>
+        </div>
+    </div>
+</div>
