--- a/BugTracker2/Views/Shared/_Layout.cshtml
+++ b/BugTracker2/Views/Shared/_Layout.cshtml
@@ -72,56 +72,102 @@
 
                 @*This is a way to abstract profile info unless valid user is signed in*@
                 @*@if (SignInManager.IsSignedIn(User))
-                {*@
-            <li class="nav-item dropdown pe-3">
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <a asp-controller="Account" asp-action="Logout">@User.Identity.Name, Logout</a>
-                    <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <!--Needs to reflect current logged in user-->
-                        <img src="~/img/Kyle.PNG" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">@User.Identity.Name</span>
-                    </a><!-- End Profile Iamge Icon -->
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                        <li class="dropdown-header">
+                    {*@
+                <li class="nav-item dropdown pe-3">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a asp-controller="Account" asp-action="Logout">@User.Identity.Name, Logout</a>
+                        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
                             <!--Needs to reflect current logged in user-->
-                            <h6>@User.Identity.Name</h6>
-                            <!--Needs to reflect AuthorizationLevel-->
-                            <span>Web Designer</span>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                            <img src="~/img/Kyle.PNG" alt="Profile" class="rounded-circle">
+                            <span class="d-none d-md-block dropdown-toggle ps-2">@User.Identity.Name</span>
+                        </a><!-- End Profile Iamge Icon -->
+                        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+                            <li class="dropdown-header">
+                                <!--Needs to reflect current logged in user-->
+                                <h6>@User.Identity.Name</h6>
+                                <!--Needs to reflect AuthorizationLevel-->
+                                <span>Web Designer</span>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
 
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                                <i class="bi bi-person"></i>
-                                <span>My Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                            <li>
+                                <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+                                    <i class="bi bi-person"></i>
+                                    <span>My Profile</span>
+                                </a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
 
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <i class="bi bi-box-arrow-right"></i>
-                                <span>Sign Out</span>
-                            </a>
-                        </li>
-                    </ul><!-- End Profile Dropdown Items -->
-                }
-                else
-                {
-                    <a asp-controller="Account" asp-action="Login">Login</a>
-                    <a asp-controller="Account" asp-action="Register">Register</a>
-                }
+                            <li>
+                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                    <i class="bi bi-box-arrow-right"></i>
+                                    <span>Sign Out</span>
+                                </a>
+                            </li>
+                        </ul><!-- End Profile Dropdown Items -->
+                    }
+                    else
+                    {
+                        <a asp-controller="Account" asp-action="Login">Login</a>
+                        <a asp-controller="Account" asp-action="Register">Register</a>
+                    }
 
-            </li><!-- End Profile Nav -->
+                </li><!-- End Profile Nav -->
 
             </ul>
         </nav><!-- End Icons Navigation -->
     </header><!-- End Header -->
+    <aside id="sidebar" class="sidebar">
+
+        <ul class="sidebar-nav" id="sidebar-nav">
+            <li class="nav-item">
+                <a class="nav-link " href="Home">
+                    <i class="bi bi-grid"></i>
+                    <span>Home</span>
+                </a>
+            </li><!-- End Dashboard Nav -->
+            <li class="nav-item">
+                <a class="nav-link " href="Bugs/BugBoard">
+                    <i class="bi bi-grid"></i>
+                    <span>Bug Dashboard</span>
+                </a>
+            </li><!-- End Dashboard Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link" href="Bugs/BugHistory">
+                    <i class="bi bi-menu-button-wide"></i><span>Bug History</span>
+                </a>
+
+            </li><!-- End Components Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-bar-chart"></i><span>Charts</span>
+                </a>
+            </li><!-- End Charts Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link" href="Account/Login">
+                    <i class="bi bi-box-arrow-in-right"></i>
+                    <span>Login</span>
+                </a>
+            </li><!-- End Login Page Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link" href="Bugs/SubmitTicket">
+                    <i class="bi bi-envelope"></i>
+                    <span>Submit A Ticket</span>
+                </a>
+            </li><!-- End Contact Page Nav -->
+        </ul>
+
+    </aside><!-- End Sidebar-->
+
     <div class="container flex-row float-left">
         <main role="main" class="pb-3">
             @RenderBody()
