Made good progress. New login ui, taking actual username and more

--- a/BugTracker2/Views/Bugs/BugBoard.cshtml
+++ b/BugTracker2/Views/Bugs/BugBoard.cshtml
@@ -26,7 +26,7 @@
                 <div class="col-4 p-1 min-vh-100" id="newcolumn">
                     <div class="card bg-light min-vh-100 shadow-lg">
                         <div class="card-body p-1">
-                            <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" @*ondragleave="clearDrop(event)"*@>
+                            <div class="dropzone">
                                 <div class="container p-1 shadow-lg border border: rounded">
                                     <h6 class="card-title text-uppercase text-center font-weight-light" style="font-family: calibri; font-size: large ">New</h6>
                                 </div>
@@ -48,7 +48,6 @@
                                             </div>
                                         </div>
                                     }
-                                    &nbsp;
                                 </div>
                             </div>
                         </div>
@@ -58,7 +57,7 @@
                 <div class="col-4 p-1 min-vh-100" id="opencolumn">
                     <div class="card bg-light min-vh-100 shadow-lg">
                         <div class="card-body p-1">
-                            <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" @*ondragleave="clearDrop(event)"*@>
+                            <div class="dropzone">
                                 <div class="container p-1 shadow-lg border border: rounded">
                                     <h6 class="card-title text-uppercase text-center font-weight-light" style="font-family: calibri; font-size: large ">Open</h6>
                                 </div>
@@ -80,7 +79,6 @@
                                             </div>
                                         </div>
                                     }
-                                    &nbsp;
                                 </div>
                             </div>
                         </div>
@@ -90,7 +88,7 @@
                 <div class="col-4 p-1 min-vh-100" id="completecolumn">
                     <div class="card bg-light min-vh-100 shadow-lg">
                         <div class="card-body p-1">
-                            <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" @*ondragleave="clearDrop(event)"*@>
+                            <div class="dropzone">
                                 <div class="container p-1 shadow-lg border border: rounded">
                                     <h6 class="card-title text-uppercase font-weight-light text-center" style="font-family: calibri; font-size: large ">Complete</h6>
                                 </div>
@@ -112,7 +110,6 @@
                                             </div>
                                         </div>
                                     }
-                                    &nbsp;
                                 </div>
                             </div>
                         </div>
