--- a/BugTracker2/Views/Home/Index.cshtml
+++ b/BugTracker2/Views/Home/Index.cshtml
@@ -3,32 +3,18 @@
     ViewData["Title"] = "Home Page";
 }
 <!DOCTYPE html>
+
 <html>
 
-<body>   
+<body>
     <main id="main" class="main">
-        <div class="pagetitle">
-            <h1>Dashboard</h1>
-            <nav>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
-            </nav>
-        </div><!-- End Page Title -->
-        <!--Bug Management UI-->
-
-        <div class="container p-4 bg-light shadow-lg rounded-2" id="stubborndiv">
-
-            <h3 class="font-weight-light text-black" style="font-family: calibri; font-size: xx-large;">Animation Here?</h3>
-            
-        </div>
-        <!--End Bug Management UI-->
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
     </footer><!-- End Footer -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 
 </body>
 </html>
