--- a/BugTracker2/Views/Shared/_Layout.cshtml
+++ b/BugTracker2/Views/Shared/_Layout.cshtml
@@ -62,104 +62,84 @@
         </div><!-- End Search Bar -->
 
         <nav class="header-nav ms-auto">
-            <ul class="d-flex align-items-center">
+            <ul class="d-flex align-items-center float-start">
 
-                <li class="nav-item d-block d-lg-none">
-                    <a class="nav-link nav-icon search-bar-toggle " href="#">
-                        <i class="bi bi-search"></i>
-                    </a>
-                </li><!-- End Search Icon-->
-
-                @*This is a way to abstract profile info unless valid user is signed in*@
-                @*@if (SignInManager.IsSignedIn(User))
-                    {*@
                 <li class="nav-item dropdown pe-3">
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <a asp-controller="Account" asp-action="Logout">@User.Identity.Name, Logout</a>
                         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                            <!--Needs to reflect current logged in user-->
-                            <img src="~/img/Kyle.PNG" alt="Profile" class="rounded-circle">
-                            <span class="d-none d-md-block dropdown-toggle ps-2">@User.Identity.Name</span>
-                        </a><!-- End Profile Iamge Icon -->
-                        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+                            <span class="dropdown-toggle ps-2" style="font-family: Nunito; font-size: 18px;">@User.Identity.Name</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end profile">
+                            <li><img src="~/img/Kyle.PNG" alt="Profile" class="rounded-sm px-5"></li>
                             <li class="dropdown-header">
-                                <!--Needs to reflect current logged in user-->
                                 <h6>@User.Identity.Name</h6>
-                                <!--Needs to reflect AuthorizationLevel-->
-                                <span>Web Designer</span>
+                                <span>Software Engineer</span>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
 
                             <li>
-                                <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                                    <i class="bi bi-person"></i>
-                                    <span>My Profile</span>
-                                </a>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider">
+                                @using (Html.BeginForm("Logout", "Account", FormMethod.Post))
+                                {
+
+                                    <input type="submit" style="width: 100%; height: 35px;" value="Logout" />
+                                }
                             </li>
 
-                            <li>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <i class="bi bi-box-arrow-right"></i>
-                                    <span>Sign Out</span>
-                                </a>
-                            </li>
                         </ul><!-- End Profile Dropdown Items -->
                     }
                     else
-                    {
-                        <a asp-controller="Account" asp-action="Login">Login</a>
-                        <a asp-controller="Account" asp-action="Register">Register</a>
+                    {           
+                                <a class="btn-primary pt-2" type="submit" style="font-weight: 600; text-align: center; height: 40px;" href="Account/LoginForm">Login</a>
+                                <a class="btn-primary pt-2" type="submit" style="font-weight: 600; text-align: center; height: 40px;" href="Account/RegisterForm">Register</a>
                     }
 
                 </li><!-- End Profile Nav -->
-
             </ul>
         </nav><!-- End Icons Navigation -->
     </header><!-- End Header -->
+    @*@if (User.Identity.IsAuthenticated)
+        {*@
     <aside id="sidebar" class="sidebar">
 
         <ul class="sidebar-nav" id="sidebar-nav">
             <li class="nav-item">
-                <a class="nav-link " href="Home">
+                <a class="nav-link collapsed" href="Home">
                     <i class="bi bi-grid"></i>
                     <span>Home</span>
                 </a>
             </li><!-- End Dashboard Nav -->
             <li class="nav-item">
-                <a class="nav-link " href="Bugs/BugBoard">
+                <a class="nav-link collapsed" href="Bugs/BugBoard">
                     <i class="bi bi-grid"></i>
                     <span>Bug Dashboard</span>
                 </a>
             </li><!-- End Dashboard Nav -->
 
             <li class="nav-item">
-                <a class="nav-link" href="Bugs/BugHistory">
+                <a class="nav-link collapsed" href="Bugs/BugHistory">
                     <i class="bi bi-menu-button-wide"></i><span>Bug History</span>
                 </a>
 
             </li><!-- End Components Nav -->
 
             <li class="nav-item">
-                <a class="nav-link" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
+                <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-bar-chart"></i><span>Charts</span>
                 </a>
             </li><!-- End Charts Nav -->
 
             <li class="nav-item">
-                <a class="nav-link" href="Account/Login">
+                <a class="nav-link collapsed" href="Account/LoginForm">
                     <i class="bi bi-box-arrow-in-right"></i>
                     <span>Login</span>
                 </a>
             </li><!-- End Login Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link" href="Bugs/SubmitTicket">
+                <a class="nav-link collapsed" href="Bugs/SubmitTicket">
                     <i class="bi bi-envelope"></i>
                     <span>Submit A Ticket</span>
                 </a>
@@ -167,6 +147,7 @@
         </ul>
 
     </aside><!-- End Sidebar-->
+    @*}*@
 
     <div class="container flex-row float-left">
         <main role="main" class="pb-3">
