--- a/BugTracker2/wwwroot/css/site.css
+++ b/BugTracker2/wwwroot/css/site.css
@@ -1,45 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-div {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    position: relative;
-    animation-name: example;
-    animation-duration: 4s;
-    animation-delay: -2s;
-}
 
-@keyframes example {
-    0% {
-        background-color: red;
-        left: 0px;
-        top: 0px;
-    }
-
-    25% {
-        background-color: yellow;
-        left: 200px;
-        top: 0px;
-    }
-
-    50% {
-        background-color: blue;
-        left: 200px;
-        top: 200px;
-    }
-
-    75% {
-        background-color: green;
-        left: 0px;
-        top: 200px;
-    }
-
-    100% {
-        background-color: red;
-        left: 0px;
-        top: 0px;
-    }
+#ailogo {
+    width: 200px;
 }
 /*------------------------------------------------------*/
 a.navbar-brand {
@@ -51,6 +14,13 @@ a.navbar-brand {
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
+}
+
+.btn-primary {
+    font-weight: 100;
+    font-palette: dark !important;
+    border-radius: 3px;
+    width: 80px;
 }
 
 .btn-primary {
