--- a/BugTracker2/Views/Account/LoginForm.cshtml
+++ b/BugTracker2/Views/Account/LoginForm.cshtml
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <div class="pt-4 pb-2">
                     <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                    <p class="text-center small">Enter your username & password to login</p>
+                    <p class="text-center small">Enter your username and password to login</p>
                 </div>
                 @using (Html.BeginForm("Login", "Account", FormMethod.Post))
                 {
@@ -30,7 +30,8 @@
                         </div>
 
                         <div class="col-12">
-                            <button class="btn btn-primary w-100" type="submit">Login</button>
+                            
+                            <button class="btn w-100" style="background-color: rgba(54, 162, 235, 0.2); border-color: rgb(54, 162, 235);" type="submit">Login</button>
                         </div>
                         <div class="col-12">
                             <p class="small mb-0">Don't have account? <a href="Account/RegisterForm">Register</a></p>
