--- a/BugTracker2/Views/Bugs/SubmitTicket.cshtml
+++ b/BugTracker2/Views/Bugs/SubmitTicket.cshtml
@@ -5,11 +5,11 @@
 <body>
     <main id="main" class="main">
         <div class="pagetitle">
-            <h1>Dashboard</h1>
+            <h1>Submit Ticket</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="Home">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
+                    <li class="breadcrumb-item active">Submit Ticket</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
@@ -18,7 +18,7 @@
             <div class="card mb-3">
                 <div class="card-body">
                     <div class="pt-4 pb-2">
-                        <h5 class="card-title text-center pb-0 fs-4">Submit A Ticket</h5>
+                        @*<h5 class="card-title text-center pb-0 fs-4">Submit A Ticket</h5>*@
                         <p class="text-center small">Describe the issue you are having.</p>
                     </div>
                     <form id="cleetus">
