--- a/BugTracker2/Views/Shared/_Layout.cshtml
+++ b/BugTracker2/Views/Shared/_Layout.cshtml
@@ -92,8 +92,8 @@
                     }
                     else
                     {           
-                                <a class="btn pt-2" type="submit" style="font-weight: 400; color: black; text-align: center; height: 40px; background-color: rgba(54, 162, 235, 0.3); border-color: rgb(54, 162, 235); border-width: 2px;" href="Account/LoginForm">Login</a>
-                                <a class="btn pt-2" type="submit" style="font-weight: 400; color: black; text-align: center; height: 40px; background-color: rgba(54, 162, 235, 0.3); border-color: rgb(54, 162, 235); border-width: 2px;" href="Account/RegisterForm">Register</a>
+                                <a class="btn pt-2" type="submit" style="font-weight: 400; color: white; text-align: center; height: 40px; background-color: rgba(54, 162, 235, 0.4); border-color: rgb(54, 162, 235); border-width: 2px;" href="Account/LoginForm">Login</a>
+                                <a class="btn pt-2" type="submit" style="font-weight: 400; color: white; text-align: center; height: 40px; background-color: rgba(54, 162, 235, 0.4); border-color: rgb(54, 162, 235); border-width: 2px;" href="Account/RegisterForm">Register</a>
                     }
 
                 </li><!-- End Profile Nav -->
@@ -126,7 +126,7 @@
             </li><!-- End Components Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" @*data-bs-target="#charts-nav" data-bs-toggle="collapse"*@ href="Charts/BarChart">
+                <a class="nav-link collapsed" href="Charts/ChartDisplay">
                     <i class="bi bi-bar-chart"></i><span>Charts</span>
                 </a>
             </li><!-- End Charts Nav -->
