--- a/BugTracker2/Views/Bugs/BugHistory.cshtml
+++ b/BugTracker2/Views/Bugs/BugHistory.cshtml
@@ -8,11 +8,11 @@
 <body>
     <main id="main" class="main">
         <div class="pagetitle">
-            <h1>Dashboard</h1>
+            <h1>Bug History</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="Home">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
+                    <li class="breadcrumb-item active">Bug History</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
