--- a/BugTracker2/Views/Charts/ChartDisplay.cshtml
+++ b/BugTracker2/Views/Charts/ChartDisplay.cshtml
@@ -9,11 +9,11 @@
 <body>
     <main id="main" class="main">
         <div class="pagetitle">
-            <h1>Dashboard</h1>
+            <h1>Charts</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="Home">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
+                    <li class="breadcrumb-item active">Charts</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
