--- a/BugTracker2/Views/Home/Index.cshtml
+++ b/BugTracker2/Views/Home/Index.cshtml
@@ -7,12 +7,19 @@
 <html>
 
 <body>
-    <main id="main" class="main">
+    <main id="main" class="main" style="background-color: #ffffff">
 
+        <img id="BARooster" src="~/img/BARooster.jpg" height="800" width="650" />
+
+        <div class="col-3 float-end">
+            <div class="row" id="K" style="font-size: 65px; height: 150px; width: 250px;"></div>
+            <div class="row" id="BK" style="font-size: 65px; height: 150px; width: 250px;">Buzzkill</div>
+            <div class="row" id="BK" style="font-size: 65px; height: 150px; width: 250px;">Bugtracker</div>
+            <div class="row" id="PC" style="font-size: 65px; height: 150px; width: 250px;">"Real Pest Control"</div>
+        </div>
+       
     </main><!-- End #main -->
-    <!-- ======= Footer ======= -->
-    <footer id="footer" class="footer">
-    </footer><!-- End Footer -->
+    <footer id="footer" class="footer"></footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 
