--- a/BugTracker2/Views/Account/LoginForm.cshtml
+++ b/BugTracker2/Views/Account/LoginForm.cshtml
@@ -17,13 +17,11 @@
         <div class="card mb-3">
             <div class="card-body">
                 <div class="pt-4 pb-2">
-                    @*<h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>*@
                     <p class="text-center small">Enter your username and password to login</p>
                 </div>
                 @using (Html.BeginForm("Login", "Account", FormMethod.Post))
                 {
                     <form class="row g-3 needs-validation" novalidate>
-
                         <div class="col-12">
                             <label for="yourUsername" class="form-label">Username</label>
                             <div class="input-group has-validation">
@@ -38,9 +36,9 @@
                             <div class="invalid-feedback">Please enter your password!</div>
                         </div>
 
-                        <div class="col-12">
+                        <div class="col-12  pt-2">
 
-                            <button class="btn w-100" style="background-color: rgba(54, 162, 235, 0.2); border-color: rgb(54, 162, 235);" type="submit">Login</button>
+                            <button class="btn btn-dark w-100" type="submit">Login</button>
                         </div>
                         <div class="col-12">
                             <p class="small mb-0">Don't have account? <a href="Account/RegisterForm">Register</a></p>
