--- a/BugTracker2/Views/Shared/_Layout.cshtml
+++ b/BugTracker2/Views/Shared/_Layout.cshtml
@@ -20,10 +20,6 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
 
-    <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -40,7 +36,6 @@
     <!-- Template Main CSS File -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body>
@@ -49,7 +44,7 @@
 
         <div class="d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
-                <span class="d-none d-lg-block">Roy Cleetus Tracker</span>
+                <span class="d-none d-lg-block">Buzzkill Bugtracker</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div><!-- End Logo -->
@@ -91,9 +86,9 @@
                         </ul><!-- End Profile Dropdown Items -->
                     }
                     else
-                    {           
-                                <a class="btn pt-2" type="submit" style="font-weight: 400; color: white; text-align: center; height: 40px; background-color: rgba(54, 162, 235, 0.4); border-color: rgb(54, 162, 235); border-width: 2px;" href="Account/LoginForm">Login</a>
-                                <a class="btn pt-2" type="submit" style="font-weight: 400; color: white; text-align: center; height: 40px; background-color: rgba(54, 162, 235, 0.4); border-color: rgb(54, 162, 235); border-width: 2px;" href="Account/RegisterForm">Register</a>
+                    {
+                        <a class="btn btn-outline-dark" type="submit" style="font-weight: 400; color: black; text-align: center; height: 40px;  border-width: 2px;" href="Account/LoginForm">Login</a>
+                        <a class="btn btn-outline-dark" type="submit" style="font-weight: 400; color: black; text-align: center; height: 40px; border-width: 2px;" href="Account/RegisterForm">Register</a>
                     }
 
                 </li><!-- End Profile Nav -->
@@ -101,52 +96,54 @@
         </nav><!-- End Icons Navigation -->
     </header><!-- End Header -->
     @*@if (User.Identity.IsAuthenticated)
-        {*@
-    <aside id="sidebar" class="sidebar">
+    {*@
+        <aside id="sidebar" class="sidebar p-0">
 
-        <ul class="sidebar-nav" id="sidebar-nav">
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="Home">
-                    <i class="bi bi-grid"></i>
-                    <span>Home</span>
-                </a>
-            </li><!-- End Dashboard Nav -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="Bugs/BugBoard">
-                    <i class="bi bi-grid"></i>
-                    <span>Bug Dashboard</span>
-                </a>
-            </li><!-- End Dashboard Nav -->
+            <ul class="sidebar-nav" id="sidebar-nav">
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="Home">
+                        <i class="bi bi-house"></i>
+                        <span style="font-size: 18px;">Home</span>
+                    </a>
+                </li><!-- End Dashboard Nav -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="Bugs/BugBoard">
+                        <i class="bi bi-bug"></i>
+                        <span style="font-size: 18px;">Bug Dashboard</span>
+                    </a>
+                </li><!-- End Dashboard Nav -->
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="Bugs/BugHistory">
-                    <i class="bi bi-menu-button-wide"></i><span>Bug History</span>
-                </a>
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="Bugs/BugHistory">
+                        <i class="bi bi-menu-button-wide"></i>
+                        <span style="font-size: 18px;">Bug History</span>
+                    </a>
 
-            </li><!-- End Components Nav -->
+                </li><!-- End Components Nav -->
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="Charts/ChartDisplay">
-                    <i class="bi bi-bar-chart"></i><span>Charts</span>
-                </a>
-            </li><!-- End Charts Nav -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="Charts/ChartDisplay">
+                        <i class="bi bi-bar-chart"></i>
+                        <span style="font-size: 18px;">Charts</span>
+                    </a>
+                </li><!-- End Charts Nav -->
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="Account/LoginForm">
-                    <i class="bi bi-box-arrow-in-right"></i>
-                    <span>Login</span>
-                </a>
-            </li><!-- End Login Page Nav -->
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="Account/LoginForm">
+                        <i class="bi bi-box-arrow-in-right"></i>
+                        <span style="font-size: 18px;">Login</span>
+                    </a>
+                </li><!-- End Login Page Nav -->
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="Bugs/SubmitTicket">
-                    <i class="bi bi-envelope"></i>
-                    <span>Submit A Ticket</span>
-                </a>
-            </li><!-- End Contact Page Nav -->
-        </ul>
+                <li class="nav-item">
+                    <a class="nav-link collapsed" href="Bugs/SubmitTicket">
+                        <i class="bi bi-envelope"></i>
+                        <span style="font-size: 18px;">Submit A Ticket</span>
+                    </a>
+                </li><!-- End Contact Page Nav -->
+            </ul>
 
-    </aside><!-- End Sidebar-->
+        </aside><!-- End Sidebar-->
     @*}*@
 
     <div class="container flex-row float-left">
@@ -164,8 +161,6 @@
 </body>
 </html>
 
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
 <!-- Vendor JS Files -->
 <script src="vendor/bootstrap/js/bootstrap.bundle.js"></script>
 <script src="vendor/php-email-form/validate.js"></script>
@@ -179,6 +174,8 @@
 <!-- Template Main JS File -->
 <script src="js/main.js"></script>
 <script src="_framework/blazor.webassembly.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
