--- a/BugTracker2/wwwroot/css/site.css
+++ b/BugTracker2/wwwroot/css/site.css
@@ -40,6 +40,18 @@ a {
 html {
   font-size: 14px;
 }
+html, body {
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    overflow-x: hidden !important;
+}
+/** {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+}*/
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -64,15 +76,15 @@ button.accept-policy {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
+/*html {
   position: relative;
   min-height: 100%;
-}
+}*/
 
-body {
+/*body {*/
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
+  /*margin-bottom: 60px;
+}*/
 .footer {
   position: absolute;
   bottom: 0;
@@ -147,9 +159,6 @@ div.content {
 #stubborndiv{
     float: left;
 }
-.container p-4 bg-light shadow-lg {
-    float: left;
 
-}
 
 
