--- a/BugTracker2/Views/Home/Index.cshtml
+++ b/BugTracker2/Views/Home/Index.cshtml
@@ -13,9 +13,9 @@
 
         <div class="col-3 float-end">
             <div class="row" id="K" style="font-size: 65px; height: 150px; width: 250px;"></div>
-            <div class="row" id="BK" style="font-size: 65px; height: 150px; width: 250px;">Buzzkill</div>
-            <div class="row" id="BK" style="font-size: 65px; height: 150px; width: 250px;">Bugtracker</div>
-            <div class="row" id="PC" style="font-size: 65px; height: 150px; width: 250px;">"Real Pest Control"</div>
+            <div class="row" id="BK" style="font-size: 65px; height: 150px; width: 250px;">Placeholder</div>
+            <div class="row" id="BK" style="font-size: 65px; height: 150px; width: 250px;">for</div>
+            <div class="row" id="PC" style="font-size: 65px; height: 150px; width: 250px;">Text Design</div>
         </div>
        
     </main><!-- End #main -->
